--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "workspace",
+  "homepage": "https://u22099.github.io/Portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
