--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://u22099.github.io/Portfolio",
+  "homepage": "https://portfolio-fawn-three-24.vercel.app",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
